--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
   "devDependencies": {
     "prettier-standard": "^16.4.1",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "license": "MIT"
 }
